# kb-upkeep

./: .editorconfig  .envrc  .gitignore  .stignore  README.md  example.env  flake.nix  justfile  pyproject.toml
scripts/: generate_visits.py  sdv_merger.py
src/main/proto/: upkeep.proto
src/main/python/server/: __main__.py  base.py  data.py  service.py
src/main/python/server/api/: upkeep_pb2.py
src/main/python/server/app/: main.py
src/main/python/server/tmpl/: text.j2.md
src/main/python/server/tools/: smol_spark.py
