[project]
name = "kb-upkeep"
version = "0.1.0"
description = "Content upkeep daemon"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.2",
    "autogen>=0.9.1.post0",
    "fastapi>=0.115.12",
    "fastmcp>=2.5.1",
    "grpcio>=1.71.0",
    "grpcio-tools>=1.71.0",
    "httpx>=0.28.1",
    "mcp[cli](>=1.9.1,<2.0.0)",
    "pyarrow>=20.0.0",
    "pyhocon>=0.3.61",
    "pyspark>=4.0.0,<5.0.0",
    "sdv(>=1.21.0,<2.0.0)",
    "smolagents[openai]>=1.16.1,<2.0.0",
    "starlette>=0.46.2",
    "tabulate(>=0.9.0,<1.0.0)",
    "uvicorn>=0.34.2",
]

[dependency-groups]
dev = [
    "ipython>=9.2.0",
]

[tool.setuptools]
packages = ["src/main/python/server"]

